build-logs/build-seqalign-0.2.0.4.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - seqalign-0.2.0.4 (lib) (first run)
Configuring library for seqalign-0.2.0.4...
Preprocessing library for seqalign-0.2.0.4...
Building library for seqalign-0.2.0.4...
[1 of 1] Compiling Alignment

Alignment.hs:5:1: warning: [-Wdeprecations]
    Module ‘Foreign.ForeignPtr.Safe’ is deprecated:
      "Safe is now the default, please use Foreign.ForeignPtr instead"
  |
5 | import Foreign.ForeignPtr.Safe
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Alignment.hs:39:10: warning: [GHC-06201] [-Wmissing-methods]
    • No explicit implementation for
        either ‘poke’ or ‘pokeElemOff’ or ‘pokeByteOff’
    • In the instance declaration for ‘Storable KSWR’
   |
39 | instance Storable KSWR where
   |          ^^^^^^^^^^^^^

cbits/editdist.c:59:32: error:
     warning: ‘degeneracies’ is static but used in inline function ‘degen_eq’ which is not static
       59 |     return !(degeneracies[a] & degeneracies[b]);
          |                                ^~~~~~~~~~~~
   |
59 |     return !(degeneracies[a] & degeneracies[b]);
   |                                ^

cbits/editdist.c:59:14: error:
     warning: ‘degeneracies’ is static but used in inline function ‘degen_eq’ which is not static
       59 |     return !(degeneracies[a] & degeneracies[b]);
          |              ^~~~~~~~~~~~
   |
59 |     return !(degeneracies[a] & degeneracies[b]);
   |              ^

cbits/editdist.c:59:32: error:
     warning: ‘degeneracies’ is static but used in inline function ‘degen_eq’ which is not static
       59 |     return !(degeneracies[a] & degeneracies[b]);
          |                                ^~~~~~~~~~~~
   |
59 |     return !(degeneracies[a] & degeneracies[b]);
   |                                ^

cbits/editdist.c:59:14: error:
     warning: ‘degeneracies’ is static but used in inline function ‘degen_eq’ which is not static
       59 |     return !(degeneracies[a] & degeneracies[b]);
          |              ^~~~~~~~~~~~
   |
59 |     return !(degeneracies[a] & degeneracies[b]);
   |              ^

cbits/sw.c:34:41: error:
     warning: ‘seq_nt4_table’ is static but used in inline function ‘trans_nt4’ which is not static
       34 |     for (i = 0; i < qlen; i++) qnt[i] = seq_nt4_table[qsq[i]];
          |                                         ^~~~~~~~~~~~~
   |
34 |     for (i = 0; i < qlen; i++) qnt[i] = seq_nt4_table[qsq[i]];
   |                                         ^

cbits/sw.c:34:41: error:
     warning: ‘seq_nt4_table’ is static but used in inline function ‘trans_nt4’ which is not static
       34 |     for (i = 0; i < qlen; i++) qnt[i] = seq_nt4_table[qsq[i]];
          |                                         ^~~~~~~~~~~~~
   |
34 |     for (i = 0; i < qlen; i++) qnt[i] = seq_nt4_table[qsq[i]];
   |                                         ^
